[package]
authors = [ "iximeow <me@iximeow.net>" ]
description = "instruction decoder for the renesas m16c architecture"
edition = "2018"
license = "0BSD"
name = "yaxpeax-m16c"
repository = "http://git.iximeow.net/yaxpeax-m16c/"
version = "0.0.2"

[dependencies]
yaxpeax-arch = { version = "0.0.3", default-features = false, features = [] }
"num-traits" = { version = "0.2", default-features = false }
"serde" = { version = "1.0", optional = true }
"serde_json" = { version = "1.0", optional = true }
"serde_derive" = { version = "1.0", optional = true }

[[test]]
name = "test"
path = "test/test.rs"

[profile.release]
opt-level = 3
lto = true

[features]
default = ["std", "use-serde"]

# opt-in for some apis that are really much nicer with String
std = []

use-serde = ["yaxpeax-arch/use-serde", "serde", "serde_derive"]
